Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
    "source": [
     "a = []\n",
     "b = a\n",
-    "identity_compare = {} is {} # False\n",
+    "identity_compare = {} is not {} # False\n",
     "identity_compare2 = a is b # True\n",
     "identity_compare3 = b is not [] # True\n",
     "identity_compare4 = 9 is 10 # True\n",
