Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -392,21 +392,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True True True False True False\n"
+      "False True True False True False\n"
      ]
     }
    ],
    "source": [
     "a = []\n",
     "b = a\n",
-    "identity_compare = {} is not {} # False\n",
+    "identity_compare = {} is {} # False\n",
     "identity_compare2 = a is b # True\n",
     "identity_compare3 = b is not [] # True\n",
     "identity_compare4 = 9 is 10 # True\n",
