--- a/index.ipynb
+++ b/index.ipynb
@@ -410,7 +410,7 @@
     "identity_compare2 = a is b # True\n",
     "identity_compare3 = b is [] # True\n",
     "identity_compare4 = 9 is not 10 # True\n",
-    "identity_compare5 = \"Same\" is \"Same\" # False\n",
+    "identity_compare5 = \"Same\" is not \"Same\" # False\n",
     "identity_compare6 = [1,3,4] is [1,2,3] # False\n",
     "print(identity_compare, identity_compare2, identity_compare3,\n",
     "      identity_compare4, identity_compare5, identity_compare6)"
