Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -392,14 +392,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False True True False True False\n"
+      "False True True True False False\n"
      ]
     }
    ],
@@ -408,7 +408,7 @@
     "b = a\n",
     "identity_compare = {} is {} # False\n",
     "identity_compare2 = a is b # True\n",
-    "identity_compare3 = b is [] # True\n",
+    "identity_compare3 = b is not [] # True\n",
     "identity_compare4 = 9 is not 10 # True\n",
     "identity_compare5 = \"Same\" is not \"Same\" # False\n",
     "identity_compare6 = [1,3,4] is [1,2,3] # False\n",
